did this fix work on mobile?

--- a/css/style.css
+++ b/css/style.css
@@ -209,11 +209,55 @@ body {
     .flexchild{
       padding-top: 5px;
     }
-    #form_page{
-      -ms-transform: scale(1.1, 1.1);
-      -webkit-transform: scale(1.1, 1.1);
-      transform: scale(1.1, 1.1); 
+    input[type=text], select {
+      width: 100%;
+      padding: 12px 20px;
+      margin: 20px 0;
+      display: inline-block;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
     }
+    input[type=tel], select {
+      width: 100%;
+      padding: 12px 20px;
+      margin: 8px 0;
+      display: inline-block;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+    }
+    input[type=email], select {
+      width: 100%;
+      padding: 12px 20px;
+      margin: 8px 0;
+      display: inline-block;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+    }
+    
+    input[type=submit] {
+      width: 100%;
+      background-color: #FFD200;
+      color: white;
+      padding: 14px 20px;
+      margin: 8px 0;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    
+    input[type=submit]:hover {
+      background-color: #FFD200;
+    }
+    
+    .email_form {
+      border-radius: 5px;
+      background-color: #f2f2f2;
+      padding: 20px;
+    }
+
     .proj-image{
       width: 80%;
     }
